# octopos

./: .gdbinit  .gitignore  Cargo.toml  README.md  build.rs  mkfs.sh
.cargo/: config.toml
kernel/: Cargo.toml  abi.rs  build.rs  console.rs  error.rs  exec.rs  file.rs  fs.rs  lib.rs  param.rs  pipe.rs  plic.rs  proc.rs  sleeplock.rs  spinlock.rs  syscall.rs  sysfile.rs  uart.rs  vm.rs
kernel/src/: abi.rs  buf.rs  console.rs  error.rs  exec.rs  file.rs  frame_buffer.rs  fs.rs  kalloc.rs  lib.rs  log.rs  main.rs  memlayout.rs  param.rs  printf.rs  proc.rs  riscv.rs  serial.rs  sleeplock.rs  spinlock.rs  start.rs  sync.rs  syscall.rs  sysfile.rs  sysproc.rs  trap.rs  uart.rs  vm.rs
kernel/src/io/: frame_buffer.rs  mod.rs  serial.rs
mkfs/: Cargo.toml
mkfs/src/: main.rs
src/: buf.rs  console.rs  entry.rs  error.rs  exec.rs  file.rs  fs.rs  kalloc.rs  kernel.ld  kernelvec.rs  lib.rs  log.rs  main.rs  memlayout.rs  param.rs  plic.rs  printf.rs  proc.rs  riscv.rs  sleeplock.rs  spinlock.rs  start.rs  swtch.rs  sync.rs  syscall.rs  sysfile.rs  sysproc.rs  trampoline.rs  trap.rs  uart.rs  virtio_disk.rs  vm.rs
user/: Cargo.toml  build.rs  lib.rs
user/src/: args.rs  io.rs  lib.rs  syscall.rs
