[package]
name = "octopos"
version = "0.1.0"
authors = ["Boran Seckin <boran@boranseckin.com>"]
edition = "2024"
description = "xv6 for RISC-V in Rust"
repository = "https://github.com/boranseckin/octopos"
license = "MIT"
readme = "README.md"
keywords = ["riscv", "xv6"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "octopos"
path = "src/main.rs"

[lib]
name = "kernel"
path = "src/lib.rs"

[dependencies]
buddy-alloc = "0.6"
