[package]
name = "user"
version = "0.1.0"
edition = "2024"
authors = ["Boran Seckin <boran@boranseckin.com>"]
description = "user space programs for octopos"
repository = "https://github.com/boranseckin/octopos"
license = "MIT"
keywords = ["riscv", "xv6"]

[lib]
name = "user"
path = "src/lib.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "init"
path = "bin/init.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "sh"
path = "bin/sh.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "echo"
path = "bin/echo.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "cat"
path = "bin/cat.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "ls"
path = "bin/ls.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "rm"
path = "bin/rm.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "mkdir"
path = "bin/mkdir.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "ln"
path = "bin/ln.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "kill"
path = "bin/kill.rs"
test = false
doctest = false
bench = false

[dependencies]
kernel = { path = "../kernel" }
